--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,23 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #4a5568 #1a202c;
+}
+
+/* Works on Chrome/Edge/Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+  cursor: pointer;
+}
+*::-webkit-scrollbar-track {
+  background: #1a202c;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #4a5568;
+  border-radius: 20px;
+  border: 3px solid #1a202c;
+}
+
 @import 'tailwindcss/utilities';
