--- a/styles/index.css
+++ b/styles/index.css
@@ -20,4 +20,9 @@
   border: 3px solid #1a202c;
 }
 
+.CodeMirror {
+  font-size: 16px;
+  height: auto !important;
+}
+
 @import 'tailwindcss/utilities';
