functional line-height font-size and toggle line-numbers

--- a/styles/index.css
+++ b/styles/index.css
@@ -21,7 +21,7 @@
 }
 
 .CodeMirror {
-  font-size: 16px;
+  font-size: inherit !important;
   height: auto !important;
   font-family: inherit !important;
   padding: 8px;
